refactor: refactor files

--- a/src/components/CustomSelect/CustomSelect.css
+++ b/src/components/CustomSelect/CustomSelect.css
@@ -125,6 +125,7 @@
   color: #7b61ff !important;
 }
 
-.customSelect__indicator-separator {
+.customSelect__indicator-separator,
+.customSelect__clear-indicator {
   display: none !important;
 }
