--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -3,7 +3,7 @@
   border: none;
   border-radius: 10px;
   height: 56px;
-  width: 199px;
+  width: 100%;
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
