--- a/src/components/PagesWrapper/PagesWrapper.css
+++ b/src/components/PagesWrapper/PagesWrapper.css
@@ -1,10 +1,7 @@
-.pagesWrapper {
-  font-family: "Exo 2", sans-serif;
-}
-
 .pages__container {
   display: flex;
   gap: 146px;
+  padding-bottom: 64px;
 }
 
 .pages__content {
